changed table headers for some feilds so table aligns correctly

--- a/res/goldennuts.css
+++ b/res/goldennuts.css
@@ -37,12 +37,12 @@
         padding:1px;
 }
 
-.TColor {border-collapse:collapse;margin: 0 auto;width:80%;height:80% }
-.TColor td{padding:3px;border:#4e95f4 1px solid;text-align:left;font-size: 100%}
+.TColor {border-collapse:collapse;margin: 0 auto;width:80%;height:60% }
+.TColor td{padding:1px;border:#4e95f4 1px solid;text-align:left;font-size: 100%}
 .TColor tr{background:#b8d1f3;}
 .TColor tr:nth-child(odd){background:#b8d1f3;}
 .TColor tr:nth-child(even){background: #dae5f4;}
-.TColor th { padding: 3px;border: 1px solid black;border-collapse: collapse}
+.TColor th { padding: 1px;border: 1px solid black;border-collapse: collapse;text-align:left;}
 
 .TColor input[type=number] {
   height: 24px;
